Fixed landing page overage on mobile

--- a/src/components/home/style.scss
+++ b/src/components/home/style.scss
@@ -2,7 +2,7 @@
 
 .container {
   width: 100vw;
-  height: 100vh;
+  min-height: 100vh;
   overflow: hidden;
 }
 
